--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li>projets</li>
                 <li>contact </li>
-                <li><a href="./login.html">login</a></li>
+                <li id="loginLink"><a href="./login.html">login</a></li>
                 <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
         </nav>
@@ -41,10 +41,6 @@
                 <h2>Mes Projets</h2>
                 <aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display:none ;">
                     <div class="modal-wrapper">
-                        <span><a href="#" class="close-btn">&times;</a></span>
-                        <h1 id="titlemodal">Test pour Modale</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas dui id ornare arcu odio ut sem nulla.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas dui id ornare arcu odio ut sem nulla.</p>	
                     </div>
                 </aside>
             </div>
