--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="">
     <link rel="stylesheet" href="./assets/style.css">
     <script type="module" src="script.js"></script>
+    <script type="module" src="modale.js"></script>
 </head>
 <body>
     <header>
