--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,11 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/Backend/node_modules/@fortawesome/fontawesome-free/css/all.css">
     <script src="https://kit.fontawesome.com/58158fb210.js" crossorigin="anonymous"></script>
     <meta name="description" content="">
     <link rel="stylesheet" href="./assets/style.css">
+    <script defer type="module" src="./modale.js"></script>
     <script type="module" src="script.js"></script>
-    <script type="module" src="modale.js"></script>
+    
 </head>
 <body>
     <header>
@@ -28,7 +30,7 @@
     <main>
         <section id="introduction">
             <figure>
-                <img src="./assets/images/sophie-bluel.png" alt="">
+                <img src="assets/images/sophie-bluel.png" alt="">
             </figure>
             <article>
                 <h2>Designer d'espace</h2>
@@ -69,5 +71,6 @@
             </ul>
         </nav>
     </footer>
+    
 </body>
 </html>
