--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,9 +11,9 @@
     <script src="https://kit.fontawesome.com/58158fb210.js" crossorigin="anonymous"></script>
     <meta name="description" content="">
     <link rel="stylesheet" href="./assets/style.css">
-    <script defer type="module" src="./modale.js"></script>
+    <script defer type="module" src="modale.js"></script>
+    <script type="module" src="./token.js"></script>
     <script type="module" src="script.js"></script>
-    
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li>projets</li>
-                <li>contact </li>
+                <li>contact</li>
                 <li id="loginLink"><a href="./login.html">login</a></li>
                 <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
@@ -42,12 +42,20 @@
         <section id="portfolio">
             <div class="entetegallery">
                 <h2>Mes Projets</h2>
-                <aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display:none ;">
+                <div id="monAlert" class="alert">
+                    <div class="alert-content">
+                        <span class="close-btn2">&times;</span>
+                        <p id="alertText">Quelque texte ici...</p>
+                    </div>
+                </div>
+                <aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display:none;">
                     <div class="modal-wrapper">
+                        <!-- Contenu de la modal ici -->
                     </div>
                 </aside>
             </div>
             <div class="gallery">
+                <!-- Contenu de la galerie ici -->
             </div>
         </section>
         <section id="contact">
@@ -71,6 +79,5 @@
             </ul>
         </nav>
     </footer>
-    
 </body>
 </html>
