--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -12,6 +12,8 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="assets/style.css" />
+    <script type="module" src="./token.js"></script>
+    <script type="module" src="./login.js"></script>
     
   </head>
   <body>
@@ -52,5 +54,4 @@
       </footer>
     </main>
   </body>
-  <script src="login.js"></script>
 </html>
